--- a/conf/db.ini.example
+++ b/conf/db.ini.example
@@ -1,9 +1,8 @@
-
-"driver = mysql
-serveur=localhost
-login=root
-pass=motdepass
-base=atelier
-charset=utf8
-collation=utf8_unicode_ci"
-
+driver = mysql
+host = localhost
+database = db_Atelier
+username = root
+password = monPassword
+charset = utf8
+collation = utf8_unicode_ci
+prefix = 
